# searchfast

./: .gitignore  CMakeLists.txt  FastFileSearch.cpp  security_report.txt
include/app/: config_manager.h  export_manager.h  search_manager.h
include/core/: logger.h  types.h
include/engine/: file_watcher.h  index_manager.h  progressive_indexer.h  search_engine.h
include/storage/: cache_manager.h  memory_index.h  sqlite_database.h
include/ui/: console_ui.h  main_window.h  smart_file_browser.h
include/utils/: thread_safe_queue.h
scripts/: build.py  security_scan.py
src/: gui_desktop.cpp  instant_search_gui.cpp  instant_search_simple.cpp  main.cpp  main_console.cpp  main_gui.cpp  windows_search_gui.cpp
src/core/: logger.cpp  types.cpp
src/ui/: console_ui.cpp  main_window.cpp
